# Calibration_cl

./: .gitignore  README.md  cifar100_der_control.sh  cifar10_der_control.sh  cifar10_der_soc.sh  main.py  pyproject.toml
Runs/: test.parquet
src/: buffer_selection.py  dataloader.py  der.py  socrates_loss.py  util.py  utils.py
src/models/: resnet18.py  resnet32.py  utils.py  vit.py
